# whatisthemoviename-backend

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
src/: app.py  config.py
src/routers/: films.py
src/schemas/: film.py
src/services/: ollama_service.py  scrapers.py  tmdb_service.py
src/utils/: image_utils.py
